# rust-elaborator

./: .gitignore  Cargo.toml  README.md  flake.nix  games.csv  package.nix  sample_in.csv  sample_out.csv
src/: lib.rs  main.rs
